src/objects/Order_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_Recommendation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bundle Recommendation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Final Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Buy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Item Buy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Receive__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Item Receive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Status_Code__c</fullName>
        <description>A/S 400 Status Code</description>
        <label>Item Status Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Status_Description__c</fullName>
        <description>Description of A/S 400 status code</description>
        <label>Item Status Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Status__c</fullName>
        <description>ATG Status equivalent to A/S 400 status code.</description>
        <label>Item Status</label>
        <picklist>
            <picklistValues>
                <fullName>INPROGRESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PENDING MERCHANT ACTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHIPPED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANCELLED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Suffix__c</fullName>
        <formula>Product_Name__r.Product_Suffix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Suffix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Just_One_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Just One Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Code__c</fullName>
        <label>Offer Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order Number</label>
        <referenceTo>Orders__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If a line item is split or if a product is substituted this field will record the original quantity before the change.</description>
        <label>Original Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Reason__c</fullName>
        <label>Override Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Adamant about purchasing only 1 bottle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer saw a different price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Matching with other products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source Code Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW International Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Match Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Match Catalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Match a Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog Source Code Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promo Code Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSR Incentive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Override__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <formula>Product_Name__r.Product_ID__c</formula>
        <label>Item ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Name</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <formula>Product_Name__r.Product_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field refers to the quantity of the item being purchased.</description>
        <label>Item Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Recommendation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Recommendation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity_Shipped__c</fullName>
        <label>Quantity Shipped</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Order_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Order Line Item applies to this Order Adjustment.</description>
        <label>Related Order Adjustment</label>
        <referenceTo>Order_Adjustment__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKU_Number__c</fullName>
        <label>SKU Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Tracking_Number__c</fullName>
        <description>Used to capture the tracking number associated with the shipment of the product.</description>
        <label>Shipment Tracking Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field, specifies when a line Item has been shipped.</description>
        <label>Shipped Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipped_Date__c</fullName>
        <label>Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipper__c</fullName>
        <description>Used to capture the shipping information from the order fulfillment system.</description>
        <label>Shipper</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Static_Unit_Price__c</fullName>
        <label>Static Unit Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Substituted_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Substituted Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Order Line Items (Substituted Item)</relationshipLabel>
        <relationshipName>Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <formula>Product_Name__r.TaxCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <formula>IF(Order__r.Customer__r.Associate_Customer__c,
Product_Name__r.Associate_Sale_Price__c,
Product_Name__r.Sale_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Update_Quantity__c</fullName>
        <description>ONLY for use with Order status update web service - Do not touch or alter!</description>
        <label>Update Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Website Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order Line Item</label>
    <nameField>
        <label>Order Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Override_Reason</fullName>
        <active>true</active>
        <description>If a CSR checks override and overrides a price, they must provide a reason in the override reason field.</description>
        <errorConditionFormula>AND(
 NOT(ISBLANK(Price_Override__c)), Price_Override__c &gt; 0,
ISBLANK(TEXT(Override_Reason__c)))</errorConditionFormula>
        <errorDisplayField>Override_Reason__c</errorDisplayField>
        <errorMessage>The system requires an &quot;Override Reason&quot; before submitting an override to the price of this order.</errorMessage>
    </validationRules>
</CustomObject>